# flake8-warnings

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
flake8_warnings/: __init__.py  _astroid.py  _base.py  _finder.py  _flake8_plugin.py  _pylint_plugin.py
flake8_warnings/_extractors/: __init__.py  _decorators.py  _docstrings.py  _stdlib.py  _warnings.py
notice/: __init__.py  _base.py  _cli.py  _finder.py  _flake8_plugin.py  _pylint_plugin.py
notice/_extractors/: __init__.py  _base.py  _decorators.py  _warnings.py
tests/: test_base.py  test_finder.py  test_warnings.py
tests/samples/: warnings_function.py  warnings_module.py
tests/test_extractors/: helpers.py  test_base.py  test_common.py  test_decorators.py  test_warnings.py
