[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flake8_warnings"
authors = [
    {name = "Gram", email = "gram@orsinium.dev"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dynamic = ["version", "description"]
classifiers = [
     "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = [
    "flake8",
    "pylint",
    "warnings",
    "linter",
    "flakehell",
]
dependencies = ["astroid"]

[project.optional-dependencies]
test = ["pytest"]
lint = [
    "flake8-length",
    "mypy",
    "isort",
]


[project.entry-points."flake8.extension"]
NT0 = "flake8_warnings:Flake8Checker"

[project.urls]
Source = "https://github.com/orsinium-labs/flake8_warnings"

[tool.mypy]
files = ["flake8_warnings", "tests"]
python_version = 3.7
ignore_missing_imports = true
# follow_imports = "silent"
show_error_codes = true
allow_redefinition = true

# Settings making mypy checks harder.
# If something here produces too many false-positives,
# consider turning it off.
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"
